[package]
name = "SimpleChatBackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = "1.0.196"
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1.36.0", features = ["full"] }
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
